gobmkida/c0/endgame
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/endgame/src/interface/play_ascii.c:1543:1: error: use of undeclared identifier 'qToBigEndian'
qToBigEndian<unsigned int>( gameinfoa->computer_player, stdout); 
^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/endgame/src/interface/play_ascii.c:1543:14: error: expected expression
qToBigEndian<unsigned int>( gameinfoa->computer_player, stdout); 
             ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/endgame/src/obj/2/play_ascii.o] Error 1
